[gd_scene load_steps=15 format=3 uid="uid://cq3oad5f7idrh"]

[ext_resource type="Script" uid="uid://0yrqu6be0li" path="res://HotTopicGame/Menu/LevelSelect/level_select.gd" id="1_8ioey"]
[ext_resource type="Texture2D" uid="uid://csbwpk6edb34d" path="res://HotTopicGame/Backgrounds/BackgroundStars.PNG" id="2_6v4d8"]
[ext_resource type="Texture2D" uid="uid://hcibjcm6dcl3" path="res://HotTopicGame/Menu/LevelSelect/Button.png" id="2_8ioey"]
[ext_resource type="Texture2D" uid="uid://cx5xbt1q0j7v2" path="res://HotTopicGame/Menu/Window.png" id="3_6v4d8"]
[ext_resource type="PackedScene" uid="uid://y22b74jnpdkq" path="res://HotTopicGame/Menu/LevelSelect/level_box.tscn" id="4_hsmni"]
[ext_resource type="Texture2D" uid="uid://bsud3s4sc1bmd" path="res://HotTopicGame/Menu/SkullTexture.png" id="5_hsmni"]
[ext_resource type="Script" uid="uid://by022qqs523a7" path="res://FileManager.gd" id="7_hsmni"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k0itm"]
atlas = ExtResource("2_8ioey")
region = Rect2(1346, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohn87"]
atlas = ExtResource("2_8ioey")
region = Rect2(1551, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjxvk"]
atlas = ExtResource("3_6v4d8")
region = Rect2(3468, 4564, 444, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmrp1"]
atlas = ExtResource("3_6v4d8")
region = Rect2(3533, 4689, 358, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5d41"]
atlas = ExtResource("5_hsmni")

[sub_resource type="AtlasTexture" id="AtlasTexture_sjml4"]
atlas = ExtResource("3_6v4d8")
region = Rect2(1057, 162, 926, 741)

[sub_resource type="AtlasTexture" id="AtlasTexture_vijtr"]
atlas = ExtResource("3_6v4d8")
region = Rect2(1328, 56, 344, 80)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ioey")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6v4d8")
expand_mode = 1
stretch_mode = 1

[node name="HomeButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 149.0
offset_bottom = 132.0
texture_normal = SubResource("AtlasTexture_k0itm")
texture_pressed = SubResource("AtlasTexture_ohn87")
ignore_texture_size = true
stretch_mode = 5

[node name="DeathTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -161.5
offset_top = -111.0
offset_right = 161.5
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("AtlasTexture_sjxvk")
expand_mode = 1

[node name="DeathCounterFrontTexture" type="TextureRect" parent="DeathTexture"]
layout_mode = 0
offset_left = 58.0
offset_top = 15.0
offset_right = 312.0
offset_bottom = 71.0
texture = SubResource("AtlasTexture_mmrp1")
expand_mode = 1

[node name="DeathTexture" type="TextureRect" parent="DeathTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_y5d41")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="DeathTexture"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.214
anchor_top = 0.19
anchor_right = 0.957
anchor_bottom = 0.7
offset_left = -0.122002
offset_right = -0.110992
theme_override_colors/font_outline_color = Color(0.0652206, 0.74586, 0.335061, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -377.5
offset_right = 377.5
offset_bottom = 608.0
grow_horizontal = 2
texture = SubResource("AtlasTexture_sjml4")
expand_mode = 1
stretch_mode = 5

[node name="TextTexture" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 200.5
offset_top = 15.0
offset_right = 544.5
offset_bottom = 95.0
texture = SubResource("AtlasTexture_vijtr")

[node name="LevelGrid" type="GridContainer" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.057
anchor_top = 0.24
anchor_right = 0.918
anchor_bottom = 0.839
offset_left = -0.0350037
offset_top = 0.0799866
offset_right = -0.0900269
offset_bottom = -0.11203
columns = 4

[node name="LevelBox" parent="TextureRect/LevelGrid" instance=ExtResource("4_hsmni")]
layout_mode = 2
disabled = false
locked = false

[node name="LevelBox1" parent="TextureRect/LevelGrid" instance=ExtResource("4_hsmni")]
layout_mode = 2

[node name="LevelBox2" parent="TextureRect/LevelGrid" instance=ExtResource("4_hsmni")]
layout_mode = 2

[node name="LevelBox3" parent="TextureRect/LevelGrid" instance=ExtResource("4_hsmni")]
layout_mode = 2

[node name="LevelBox4" parent="TextureRect/LevelGrid" instance=ExtResource("4_hsmni")]
layout_mode = 2

[node name="LevelBox5" parent="TextureRect/LevelGrid" instance=ExtResource("4_hsmni")]
layout_mode = 2

[node name="LevelBox6" parent="TextureRect/LevelGrid" instance=ExtResource("4_hsmni")]
layout_mode = 2

[node name="LevelBox7" parent="TextureRect/LevelGrid" instance=ExtResource("4_hsmni")]
layout_mode = 2

[node name="FileManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_hsmni")

[connection signal="button_down" from="HomeButton" to="." method="_on_home_button_down"]
